--- a/_config.yml
+++ b/_config.yml
@@ -8,24 +8,24 @@
 # URL VARIABLES
 #
 # site domain, full URL to the production location of your collection
-url: 
+url: https://dfr2024.github.io
 # path to location on the domain if necessary e.g. /digital/hjccc
-baseurl: 
+baseurl: /mappingdiscriminatorydata1
 # location of code, the full url to your github repository
-source-code: https://github.com/CollectionBuilder/collectionbuilder-csv
+source-code: https://github.com/dfr2024/mappingdiscriminatorydata1
 
 ##########
 # SITE SETTINGS
 #
 # title of site appears in banner
-title: Mapping Discriminatory Data
+title: Mapping Discriminatory Media
 # tagline, a short phrase that will appear throughout the site in the top banner
-tagline: Digital Collection Magic with Static Web Technologies
+tagline: A Critical Archive of Digital Anti-Immigrant Media
 # description appears in meta tags and other locations
 # this description might appear in search result lists, keep around 160 characters max
-description: "CollectionBuilder-CSV is a template for creating digital collection exhibits using static web technology."
+description: "Mapping Discriminatory Media  "
 # keywords, a short list of subjects describing the collection, separated by semicolon, to appear in rich markup
-keywords: idaho;history;inland northwest
+keywords: borders;media;immigration;anti-immigrant;vigilante;us-mexico border
 # creator of the digital collection, to appear in meta tags; we typically use our GitHub usernames but feel free to just use your name
 author: CollectionBuilder
 
