--- a/_data/theme.yml
+++ b/_data/theme.yml
@@ -84,10 +84,10 @@ search-child-objects: true # true / false - if true, child objects will appear o
 # NAVBAR COLORS [optional!]
 # navbar text color
 # Choose from "navbar-light" for use with light background colors, or "navbar-dark" for dark background colors
-navbar-color: navbar-secondary
+navbar-color: navbar-light
 # navbar background color
 # Choose from bg-primary, bg-secondary, bg-success, bg-danger, bg-warning, bg-info, bg-light, bg-dark, bg-white
-navbar-background: bg-dark
+navbar-background: bg-light
 
 # BOOTSWATCH THEMES [optional!]
 # You can replace the standard Bootstrap theme with a Bootswatch (https://github.com/thomaspark/bootswatch) option
@@ -95,9 +95,9 @@ navbar-background: bg-dark
 bootswatch: lux # leave blank or comment out for plain bootstrap
 
 # THEME FONTS [optional!]
-base-font-size: 1.1em
-text-color: "#deeb34"
-link-color: "#0d6efd"
+base-font-size: 1.4em
+text-color: "#1a6104"
+link-color: "#044361"
 base-font-family: # comment out for bootstrap defaults. e.g. Roboto
 font-cdn: # add font stylesheet, e.g. <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
 
